load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "tsnl.log",
    srcs = ["include/tsnl/log.hpp"],
    hdrs = ["include/tsnl/log.hpp"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "eg001",
    srcs = ["src/tsnl/examples/log/eg001.cpp"],
    deps = [":tsnl.log"],
)
